--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "Blog informativo para quem trabalha com tecnologia.",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run services:up && npm run wait-for-database && npm run migration:up && next dev",
+    "dev": "npm run services:up && npm run wait-for-database && npm run migrations:up && next dev",
     "test": "npm run services:up && concurrently -n next,jest --hide next -k --success command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test:watch": "jest --watchAll --runInBand",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
     "wait-for-database": "node infra/scripts/wait-for-postgres.js",
+    "migrations:create": "node-pg-migrate -m infra/migrations create",
+    "migrations:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "next lint --dir .",
-    "migration:create": "node-pg-migrate -m infra/migrations create",
-    "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "prepare": "husky",
     "commit": "cz"
   },
